--- a/VScheme/VScheme.vcxproj
+++ b/VScheme/VScheme.vcxproj
@@ -144,6 +144,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Number.cpp" />
+    <ClCompile Include="Operators.cpp" />
+    <ClCompile Include="Symbol.cpp" />
+    <ClCompile Include="Tokens.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Context.h" />
+    <ClInclude Include="Expression.h" />
+    <ClInclude Include="Number.h" />
+    <ClInclude Include="Operators.h" />
+    <ClInclude Include="Symbol.h" />
+    <ClInclude Include="Tokens.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
